--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AudioController.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>/Users/franco/unity/tictactoe/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
